update help documents

--- a/devel/help/00Index.html
+++ b/devel/help/00Index.html
@@ -6,15 +6,13 @@
 </head><body>
 <h1> Big Data Management of Whole-genome Sequence Variant Calls </h1>
 <hr/>
-<div style="text-align: center;">
-</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.13.0</h2>
-
+<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.13.6</h2>
 <h2>Help Pages</h2>
 
 
 <table width="100%">
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray-package</a></td>
-<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
+<td>Big Data Management of Whole-Genome Sequence Variant Calls</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">alt-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">asVCF-method</a></td>
@@ -33,22 +31,26 @@
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">info-method</a></td>
 <td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="KG_P1_SampData.html">KG_P1_SampData</a></td>
+<td>Simulated sample data for 1000 Genomes Phase 1</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">qual-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">ref-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">rowRanges-method</a></td>
 <td>SeqVarGDSClass</td></tr>
-<tr><td style="width: 25%;"><a href="seqAlleleCount.html">seqAlleleCount</a></td>
-<td>Get Allele Counts</td></tr>
+<tr><td style="width: 25%;"><a href="seqAlleleFreq.html">seqAlleleCount</a></td>
+<td>Get Allele Frequencies or Counts</td></tr>
 <tr><td style="width: 25%;"><a href="seqAlleleFreq.html">seqAlleleFreq</a></td>
-<td>Get Allele Frequencies</td></tr>
+<td>Get Allele Frequencies or Counts</td></tr>
 <tr><td style="width: 25%;"><a href="seqApply.html">seqApply</a></td>
 <td>Apply Functions Over Array Margins</td></tr>
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray</a></td>
-<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
+<td>Big Data Management of Whole-Genome Sequence Variant Calls</td></tr>
 <tr><td style="width: 25%;"><a href="seqBED2GDS.html">seqBED2GDS</a></td>
 <td>Convert PLINK BED Format to SeqArray Format</td></tr>
+<tr><td style="width: 25%;"><a href="seqBlockApply.html">seqBlockApply</a></td>
+<td>Apply Functions Over Array Margins via Blocking</td></tr>
 <tr><td style="width: 25%;"><a href="seqClose.html">seqClose</a></td>
 <td>Close the SeqArray GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqClose.html">seqClose-method</a></td>
@@ -69,6 +71,8 @@
 <td>Get Data</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetFilter.html">seqGetFilter</a></td>
 <td>Get the Filter of GDS File</td></tr>
+<tr><td style="width: 25%;"><a href="seqParallelSetup.html">seqGetParallel</a></td>
+<td>Setup/Get a Parallel Environment</td></tr>
 <tr><td style="width: 25%;"><a href="seqMerge.html">seqMerge</a></td>
 <td>Merge Multiple SeqArray GDS Files</td></tr>
 <tr><td style="width: 25%;"><a href="seqMissing.html">seqMissing</a></td>
@@ -82,7 +86,7 @@
 <tr><td style="width: 25%;"><a href="seqParallel.html">seqParallel</a></td>
 <td>Apply Functions in Parallel</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallelSetup.html">seqParallelSetup</a></td>
-<td>Setup a Parallel Environment</td></tr>
+<td>Setup/Get a Parallel Environment</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallel.html">seqParApply</a></td>
 <td>Apply Functions in Parallel</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqResetFilter</a></td>
@@ -91,8 +95,8 @@
 <td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter-method</a></td>
 <td>Set a Filter to Sample or Variant</td></tr>
-<tr><td style="width: 25%;"><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></td>
-<td>Chromosome Selection</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilterChrom</a></td>
+<td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSNP2GDS.html">seqSNP2GDS</a></td>
 <td>Convert SNPRelate Format to SeqArray Format</td></tr>
 <tr><td style="width: 25%;"><a href="seqStorageOption.html">seqStorageOption</a></td>
