--- a/devel/help/SeqVarGDSClass-class.html
+++ b/devel/help/SeqVarGDSClass-class.html
@@ -97,7 +97,7 @@ Returns the geno (format) fields as a <code>SimpleList</code>. <code>geno</code>
 
 <dl>
 <dt></dt><dd>
-<p><code>asVCF(x, info=NULL, geno=NULL)</code>:
+<p><code>asVCF(x, chr.prefix="", info=NULL, geno=NULL)</code>:
 Coerces a SeqVarGDSClass object to a
 <a href="../../VariantAnnotation/html/VCF-class.html">VCF-class</a> object.  Row names correspond
 to the variant.id.  <code>info</code>
@@ -171,5 +171,5 @@ depth$data[1:10,1:5]
 seqClose(gds)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
 </body></html>
