--- a/devel/help/seqParallelSetup.html
+++ b/devel/help/seqParallelSetup.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Setup a Parallel Environment</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Setup/Get a Parallel Environment</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqParallelSetup {SeqArray}"><tr><td>seqParallelSetup {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Setup a Parallel Environment</h2>
+<h2>Setup/Get a Parallel Environment</h2>
 
 <h3>Description</h3>
 
@@ -17,6 +17,7 @@
 
 <pre>
 seqParallelSetup(cluster=TRUE, verbose=TRUE)
+seqGetParallel()
 </pre>
 
 
@@ -54,7 +55,8 @@ does stopping the registered cluster.
 
 <h3>Value</h3>
 
-<p>None.
+<p><code>seqParallelSetup()</code> has no return, and <code>seqGetParallel()</code> returns
+<code>getOption("seqarray.parallel", FALSE)</code>.
 </p>
 
 
@@ -91,5 +93,5 @@ seqClose(f)
 seqParallelSetup(FALSE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
 </body></html>
