--- a/release/help/seqVCF_SampID.html
+++ b/release/help/seqVCF_SampID.html
@@ -25,7 +25,8 @@ seqVCF_SampID(vcf.fn)
 <table summary="R argblock">
 <tr valign="top"><td><code>vcf.fn</code></td>
 <td>
-<p>the file name of VCF</p>
+<p>the file name, output a file of VCF format; or a
+<code><a href="../../base/html/connections.html">connection</a></code> object</p>
 </td></tr>
 </table>
 
@@ -37,11 +38,9 @@ seqVCF_SampID(vcf.fn)
 
 <h3>References</h3>
 
-<p>The variant call format and VCFtools.
-Danecek P, Auton A, Abecasis G, Albers CA, Banks E, DePristo MA,
-Handsaker RE, Lunter G, Marth GT, Sherry ST, McVean G, Durbin R;
-1000 Genomes Project Analysis Group.
-Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
+<p>Danecek, P., Auton, A., Abecasis, G., Albers, C.A., Banks, E., DePristo,
+M.A., Handsaker, R.E., Lunter, G., Marth, G.T., Sherry, S.T., et al. (2011).
+The variant call format and VCFtools. Bioinformatics 27, 2156-2158.
 </p>
 
 
@@ -61,5 +60,5 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 seqVCF_SampID(vcf.fn)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.9 <a href="00Index.html">Index</a>]</div>
 </body></html>
