--- a/devel/help/seqSNP2GDS.html
+++ b/devel/help/seqSNP2GDS.html
@@ -16,8 +16,8 @@
 <h3>Usage</h3>
 
 <pre>
-seqSNP2GDS(gds.fn, out.gdsfn, compress.geno="ZIP_RA",
-    compress.annotation="ZIP_RA", optimize=TRUE, digest=TRUE, verbose=TRUE)
+seqSNP2GDS(gds.fn, out.fn, storage.option="ZIP_RA", optimize=TRUE,
+    digest=TRUE, verbose=TRUE)
 </pre>
 
 
@@ -28,20 +28,16 @@ seqSNP2GDS(gds.fn, out.gdsfn, compress.geno="ZIP_RA",
 <td>
 <p>the file name of SNP format</p>
 </td></tr>
-<tr valign="top"><td><code>out.gdsfn</code></td>
+<tr valign="top"><td><code>out.fn</code></td>
 <td>
 <p>the file name, output a file of SeqArray format</p>
 </td></tr>
-<tr valign="top"><td><code>compress.geno</code></td>
+<tr valign="top"><td><code>storage.option</code></td>
 <td>
-<p>the compression method for &quot;genotype&quot;; optional
-values are defined in the function <code>add.gdsn</code></p>
-</td></tr>
-<tr valign="top"><td><code>compress.annotation</code></td>
-<td>
-<p>the compression method for the GDS variables,
-except &quot;genotype&quot;; optional values are defined in the function
-<code>add.gdsn</code></p>
+<p>specify the storage and compression options,
+by default <code><a href="seqStorageOption.html">seqStorageOption</a>("ZIP_RA")</code>; or
+<code>"LZMA_RA"</code> to use LZMZ compression algorithm with higher
+compression ratio</p>
 </td></tr>
 <tr valign="top"><td><code>optimize</code></td>
 <td>
@@ -96,5 +92,5 @@ seqSummary("tmp.gds")
 unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
 </body></html>
