--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<p>Big data management of whole-genome sequence variant calls with thousands of individuals: genotypic data (e.g., SNVs, indels and structural variation calls) and annotations in GDS files are stored in an array-oriented and compressed manner, with efficient data access using the R programming language.</p>
+<p>Big data management of whole-genome sequence variant calls with thousands of individuals: genotypic data (e.g., SNVs, indels and structural variation calls) and annotations in SeqArray files are stored in an array-oriented and compressed manner, with efficient data access using the R programming language.</p>
 
-<p>The SeqArray package is built on top of Genomic Data Structure (GDS) data format, and defines required data structure for a SeqArray file. GDS is a flexible and portable data container with hierarchical structure to store multiple scalable array-oriented data sets. It is suited for large-scale datasets, especially for data which are much larger than the available random-access memory. It also offers the efficient operations specifically designed for integers of less than 8 bits, since a single genetic/genomic variant, like SNP, usually occupies fewer bits than a byte. Data compression and decompression are available with relatively efficient random access. A high-level R interface to GDS files is available in the package gdsfmt <a href="http://bioconductor.org/packages/gdsfmt">http://bioconductor.org/packages/gdsfmt</a>.</p>
+<p>The SeqArray package is built on top of Genomic Data Structure (GDS) data format, and defines required data structure for a SeqArray file. GDS is a flexible and portable data container with hierarchical structure to store multiple scalable array-oriented data sets. It is suited for large-scale datasets, especially for data which are much larger than the available random-access memory. It also offers the efficient operations specifically designed for integers of less than 8 bits, since a diploid genotype usually occupies fewer bits than a byte. Data compression and decompression are available with relatively efficient random access. A high-level R interface to GDS files is available in the package gdsfmt <a href="http://bioconductor.org/packages/gdsfmt">http://bioconductor.org/packages/gdsfmt</a>.</p>
 
 <h2>
 <a id="bioconductor" class="anchor" href="#bioconductor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bioconductor:</h2>
 
 <p>Release Version: v1.12 <a href="http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html">(http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html)</a></p>
-<p>Release Branch: <a href="release/SeqArrayTutorial.html">Tutorial</a>, <a href="release/help/00Index.html">Help Documents</a></p>
+<p><a href="release/help/00Index.html">Help Documents</a></p>
 
 <p>Development Version: v1.13 <a href="http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html">(http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html)</a></p>
-<p>Develop Branch: <a href="devel/SeqArrayTutorial.html">Tutorial</a>, <a href="devel/help/00Index.html">Help Documents</a></p>
+<p><a href="devel/help/00Index.html">Help Documents</a></p>
 
 <h2>
 </div>
