--- a/release/help/seqExport.html
+++ b/release/help/seqExport.html
@@ -56,8 +56,8 @@ for import; or <code>NULL</code> for all variables</p>
 <tr valign="top"><td><code>digest</code></td>
 <td>
 <p>a logical value (TRUE/FALSE) or a character (&quot;md5&quot;, &quot;sha1&quot;,
-&quot;sha256&quot;, &quot;sha384&quot; or &quot;sha512&quot;); add hash codes to the GDS file if TRUE
-or a digest algorithm is specified</p>
+&quot;sha256&quot;, &quot;sha384&quot; or &quot;sha512&quot;); add md5 hash codes to the GDS file
+if TRUE or a digest algorithm is specified</p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
@@ -120,5 +120,5 @@ seqClose(f)
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.9 <a href="00Index.html">Index</a>]</div>
 </body></html>
